# freecad-auto-dark-mode

./: .gitignore  LICENSE  README.md  package.xml
AutoDarkMode/: Init.py  InitGui.py  package.xml  preferences.py  preferences_ui.py  theme_detector.py  theme_manager.py
freecad/AutoDarkMode/: __init__.py  init_gui.py  preferences.py  preferences_ui.py  theme_detector.py  theme_manager.py
