<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
    <name>AutoDarkMode</name>
    <description>Automatically switch FreeCAD theme based on system appearance (light/dark mode)</description>
    <version>1.0.0</version>
    <maintainer email="">ndesgranges</maintainer>
    <license file="LICENSE">MIT</license>
    <url type="repository" branch="main">https://github.com/ndesgranges/freecad-auto-dark-mode</url>
    <icon>resources/icons/auto_dark_mode.svg</icon>

    <content>
        <workbench>
            <freecadmin>0.21.0</freecadmin>
            <subdirectory>AutoDarkMode/</subdirectory>
        </workbench>
    </content>

    <depend>FreeCAD</depend>
</package>
